--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -27,8 +27,14 @@
 	<script type="text/javascript" src="/articles/articles.client.module.js"></script>
 	<script type="text/javascript" src="/articles/controllers/articles.client.controller.js"></script>
 	
+    <script type="text/javascript" src="/clients/clients.client.module.js"></script>
+	<script type="text/javascript" src="/clients/controllers/clients.client.controller.js"></script>
+	
 	<script type="text/javascript" src="/articles/services/articles.client.service.js"></script>
 	<script type="text/javascript" src="/articles/config/articles.client.routes.js"></script>
+
+    <script type="text/javascript" src="/clients/services/clients.client.service.js"></script>
+	<script type="text/javascript" src="/clients/config/clients.client.routes.js"></script>
 
 	<script type="text/javascript" src="/example/example.client.module.js"></script>
 	<script type="text/javascript" src="/example/controllers/example.client.controller.js"></script>
