--- a/public/example/views/example.client.view.html
+++ b/public/example/views/example.client.view.html
@@ -11,6 +11,6 @@
 			<li><a href="/#!/articles/create">Create Article</a></li>
 		</ul>
 	</div>
-	<input type="text" id="text1" ng-model="name">
-	<input type="text" id="text2" ng-model="name">
+	<!--input type="text" id="text1" ng-model="name">
+	<input type="text" id="text2" ng-model="name"-->
 </section>
