--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -26,8 +26,8 @@
 	</form>
 
 	<!-- Render the OAuth authentication links  -->
-	<a href="/oauth/facebook">Sign in with Facebook</a>
+	<!--a href="/oauth/facebook">Sign in with Facebook</a>
 	<a href="/oauth/twitter">Sign in with Twitter</a>
-	<a href="/oauth/google">Sign in with Google</a>
+	<a href="/oauth/google">Sign in with Google</a-->
 </body>
 </html>
