--- a/public/example/views/example.client.view.html
+++ b/public/example/views/example.client.view.html
@@ -7,9 +7,13 @@
 		<h1>Hello <span data-ng-bind="authentication.user.fullName"></span></h1>
 		<a href="/signout">Signout</a>
 		<ul>
+			<li><a href="/#!/clients">List Clients</a></li>
+			<li><a href="/#!/clients/create">Add Client</a></li>
+		</ul>
+		<!--ul>
 			<li><a href="/#!/articles">List Articles</a></li>
 			<li><a href="/#!/articles/create">Create Article</a></li>
-		</ul>
+		</ul-->
 	</div>
 	<!--input type="text" id="text1" ng-model="name">
 	<input type="text" id="text2" ng-model="name"-->
